# barracuda-camera-streamer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: docker-publish.yml
src/cam_to_yolo/: CMakeLists.txt  package.xml
src/cam_to_yolo/scripts/: camera_publisher.py
