<package format="2">
  <name>cam_to_yolo</name>
  <version>0.0.1</version>
  <description>Camera publisher to YOLO inference</description>
  <maintainer email="ghogari@usc.edu">Arsalan Ghogari</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
</package>
